# voting_systems_tests

./: Cargo.toml  Visualizations
.cargo/: config.toml
methods/: Cargo.toml
methods/src/: anti_plurality.rs  average.rs  condorcet.rs  fptp.rs  irv.rs  lib.rs  ranked_pairs.rs  score.rs
src/: main.rs  util.rs
src/runtime_settings/: common.rs  constants.rs  dist_to_average.rs  mod.rs  nash_multiple.rs  nash_single.rs  seats_projection.rs  visualize_distribution.rs  winner_type.rs
